--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,19 @@
 name: Run Gradle on PRs
 on: push
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
+  gradle:
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/checkout@v2
-    - name: Gradle Command
+    - uses: actions/checkout@v1
+    - uses: actions/setup-java@v1
+      with:
+        java-version: 8
     - uses: eskatos/gradle-command-action@v1
       with:
         arguments: buildPlugin
-        arguements: publishPlugin
+    - uses: eskatos/gradle-command-action@v1
+      with:
+        arguments: publishPlugin
