--- a/.github/workflows/buildPlugin.yml
+++ b/.github/workflows/buildPlugin.yml
@@ -1,21 +1,20 @@
 name: Build and Publish Plugin
-on: [repository_dispatch]
+on: push
 jobs:
   gradle:
     strategy:
       matrix:
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
+    env:
+         working-directory: ./tool-plugins/intellij
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - uses: eskatos/gradle-command-action@v1
-      with:
-        wrapper-directory: tools-plugin/intellij
-        arguments: buildPlugin
-    - uses: eskatos/gradle-command-action@v1
-      with:
-        wrapper-directory: tools-plugin/intellij
-        arguments: publishPlugin
+       - uses: actions/setup-java@v1
+         with:
+           java-version: 1.8
+       - uses: actions/checkout@v2
+       - name: build and publish plugin
+         working-directory: ${{env.working-directory}}
+         run: |
+              ./gradlew buildPlugin
+              ./gradlew publishPlugin
