--- a/.github/workflows/buildPlugin.yml
+++ b/.github/workflows/buildPlugin.yml
@@ -7,7 +7,7 @@ jobs:
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     env:
-         working-directory: ./tool-plugins/intellij
+         working-directory: ./tools-plugin/intellij
     steps:
        - uses: actions/setup-java@v1
          with:
