--- a/.github/workflows/uploadPlugin.yml
+++ b/.github/workflows/uploadPlugin.yml
@@ -30,6 +30,8 @@ jobs:
        - uses: actions/download-artifact@v1
          with:
           name: artifact
-       - run: |
+       - name: publish plugin
+         working-directory: ${{env.working-directory}}
+         run: |
               curl -i --header "Authorization: Bearer ${{ env.publish_token }}" -F pluginId=${{ env.plugin_id }} -F file=@artifact/intellij-plugin.zip -F channel=stable https://plugins.jetbrains.com/plugin/uploadPlugin 
          
