--- a/.github/workflows/uploadPlugin.yml
+++ b/.github/workflows/uploadPlugin.yml
@@ -26,7 +26,7 @@ jobs:
        - uses: actions/upload-artifact@v1
          with:
           name: artifact
-          path: intellij-plugin.zip
+          path: ./tool-plugins/intellij/intellij-plugin.zip
        - uses: actions/download-artifact@v1
          with:
           name: artifact
