--- a/.github/workflows/uploadPlugin.yml
+++ b/.github/workflows/uploadPlugin.yml
@@ -30,5 +30,5 @@ jobs:
        - name: publish plugin
          working-directory: ${{env.working-directory}}
          run: |
-              curl -i --header "Authorization: Bearer ${{ env.publish_token }}" -F pluginId=${{ env.plugin_id }} -F file=@artifact/intellij-plugin.zip -F channel=stable https://plugins.jetbrains.com/plugin/uploadPlugin 
+              curl -i --header "Authorization: Bearer ${{ env.publish_token }}" -F pluginId=${{ env.plugin_id }} -F file=@intellij-plugin.zip -F channel=stable https://plugins.jetbrains.com/plugin/uploadPlugin 
          
